--- a/app-vision-web/package.json
+++ b/app-vision-web/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "pug": "^3.0.3",
     "sass-embedded": "^1.93.2",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "axios": "^1.7.0"
   }
 }
