--- a/app-vision-web/package.json
+++ b/app-vision-web/package.json
@@ -17,6 +17,9 @@
     "pug": "^3.0.3",
     "sass-embedded": "^1.93.2",
     "vite": "^7.1.7",
-    "axios": "^1.7.0"
+    "axios": "^1.7.0",
+    "chart.js": "^4.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   }
 }
